# weeklyopt

./: .gitignore  Makefile  README.md  pyproject.toml
weeklyopt/: __init__.py  cli.py  config.py  optimize.py  optimize_fast.py  train_ml_exit.py  train_ml_exit_v2.py
weeklyopt/analysis/: __init__.py  metrics.py  plots.py
weeklyopt/data/: __init__.py  fetcher.py
weeklyopt/engine/: __init__.py  backtest.py  exit_rules.py  filters.py  flow_signals.py  fundamentals.py  market_regime.py  ml_exit.py  oi_analysis.py  portfolio_backtest.py  rolling.py  screener.py  signals.py  straddle_manager.py
weeklyopt/pricing/: __init__.py  black_scholes.py  calibration.py  volatility.py
weeklyopt/strategies/: __init__.py  base.py  cash_secured_put.py  covered_call.py  debit_spreads.py  iron_condor.py  managed_straddle.py  straddle.py  vertical_spread.py
weeklyopt/validation/: __init__.py  historical_validate.py  live_check.py  lumibot_runner.py  thetadata_client.py
